[package]
name = "rsn-body"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
glam = { version = "0.24.0", features = ["cuda", "approx"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
