[package]
name = "rsn-body"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { version = "0.10.1" }
rand = "0"
rayon = "1"

[dependencies.bevy]
version = "0.10.1"
features = ["dynamic_linking"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true